[gd_scene load_steps=3 format=3 uid="uid://cks4mfboidn10"]

[ext_resource type="Script" path="res://game/CombatSystem.gd" id="1_lkx8l"]
[ext_resource type="Theme" uid="uid://cgpmko4d01n84" path="res://game/ui-theme/theme.tres" id="2_g8hup"]

[node name="CombatSystem" type="Node3D"]
script = ExtResource("1_lkx8l")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("2_g8hup")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -40.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 2

[node name="ActionContainer" type="HBoxContainer" parent="PlayerUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="AttackButton" type="Button" parent="PlayerUI/VBoxContainer/ActionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Fire    4 AP"

[node name="StatContainer" type="HBoxContainer" parent="PlayerUI/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 64
alignment = 1

[node name="NameLabel" type="Label" parent="PlayerUI/VBoxContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.627451)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "Actor Name"
vertical_alignment = 1

[node name="APLabel" type="Label" parent="PlayerUI/VBoxContainer/StatContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.627451)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
text = "AP 0/9"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="PlayerUI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 1.0
anchor_right = 0.95
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -8.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn"

[node name="EnemyUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("2_g8hup")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -40.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 2

[node name="TextContainer" type="HBoxContainer" parent="EnemyUI/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 64
alignment = 1

[node name="TurnLabel" type="Label" parent="EnemyUI/VBoxContainer/TextContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.627451)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 32
text = "ENEMY TURN"
horizontal_alignment = 1
vertical_alignment = 1
